# otus.lessons.01.02

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CppProperties.json
otus.lessons.01.02/: CMakeLists.txt
otus.lessons.01.02/src/: XY.h  global.h  otus.lessons.01.02.cpp  otus.lessons.01.02.test.cpp  scene.h
